--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^4.21.1",
+    "@tanstack/router": "^0.0.1-beta.89",
     "@vercel/node": "^2.15.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
