--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^4.21.1",
+    "@mantine/core": "^6.0.15",
     "@tanstack/router": "^0.0.1-beta.89",
     "@vercel/node": "^2.15.2",
     "react": "^18.2.0",
