--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^4.21.1",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mantine/core": "^6.0.15",
     "@tanstack/router": "^0.0.1-beta.89",
     "@vercel/node": "^2.15.2",
